test_scores/negative_dimers/features/P68400.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P68400.pkl.xz